Maybe fixed the issue with slider images being too big on media query sizes

--- a/src/styles/projectStyles.css
+++ b/src/styles/projectStyles.css
@@ -1,3 +1,12 @@
+@media all and (max-width: 700px) {
+  .sliderImage {
+    max-height: 150px;
+    min-height: 150px;
+    width: auto;
+  }
+}
+
+
 .sliderDiv {
   display: flex;
   flex-direction: column;
@@ -11,10 +20,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .sliderImage {
-  height: 38vh;
+  height: 35vh;
   width: auto;
 }
 
