--- a/src/styles/sidebarStyles.css
+++ b/src/styles/sidebarStyles.css
@@ -45,7 +45,7 @@
 
   .muteLabel p {
     margin: auto;
-    padding-left: 100%;
+    padding-left: 10px;
   }
 }
 
